--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ GROUP=io.github.coteji
 POM_ARTIFACT_ID=coteji-target-jira
 VERSION_NAME=0.1.0
 
-POM_NAME=Coteji Core
-POM_DESCRIPTION=Coteji core package
+POM_NAME=Coteji Target JIRA
+POM_DESCRIPTION=Coteji Target JIRA package
 POM_INCEPTION_YEAR=2021
 
 POM_URL=https://github.com/coteji/coteji-target-jira/
